--- a/V2rayNG/app/build.gradle
+++ b/V2rayNG/app/build.gradle
@@ -1,63 +1,106 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-
-Properties props = new Properties()
-props.load(new FileInputStream(new File('local.properties')))
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+}
 
 android {
     compileSdkVersion Integer.parseInt("$compileSdkVer")
     buildToolsVersion "$buildToolsVer"
 
     compileOptions {
-        targetCompatibility = "8"
-        sourceCompatibility = "8"
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
-        applicationId "com.v2ray.ang"
+        applicationId PACKAGE_NAME
         minSdkVersion 21
         targetSdkVersion Integer.parseInt("$targetSdkVer")
         multiDexEnabled true
-        versionCode 495
-        versionName "1.7.33"
+        versionCode 2
+        versionName "1.0.0"
+        ndk.abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+
+        manifestPlaceholders = [
+                admobAppId     : ADMOB_APPLICATION_ID,
+                admobAppIdDebug: "ca-app-pub-3940256099942544~3347511713"
+        ]
+        buildConfigField "String", "FLURRY_APP_ID", FLURRY_APP_ID
+
     }
 
-    if (props["sign"]) {
-        signingConfigs {
-            release {
-                storeFile file("../key.jks")
-                keyAlias 'ang'
-                keyPassword '123456'
-                storePassword '123456'
-            }
-            debug {
-                storeFile file("../key.jks")
-                keyAlias 'ang'
-                keyPassword '123456'
-                storePassword '123456'
-            }
+
+    signingConfigs {
+        debug {
+            storeFile file("/config/key.jks")
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+
+        release {
+            storeFile file("/config/key.jks")
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
         }
     }
+
 
     buildTypes {
         release {
             minifyEnabled false
             zipAlignEnabled false
             shrinkResources false
-            if (props["sign"]) {
-                signingConfig signingConfigs.release
-            }
-            ndk.abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
-//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'Boolean', 'DEBUG_VERSION', "false"
         }
         debug {
+            debuggable true
             minifyEnabled false
             zipAlignEnabled false
             shrinkResources false
-            if (props["sign"]) {
-                signingConfig signingConfigs.release
+
+            buildConfigField 'Boolean', 'DEBUG_VERSION', "true"
+            applicationIdSuffix ".debug"
+        }
+    }
+
+    sourceSets.debug {
+        manifest.srcFile '../app/config/debug/AndroidManifest.xml'
+    }
+
+    flavorDimensions "minApi"
+    productFlavors {
+        armv7 {
+            ndk {
+                abiFilters "armeabi-v7a"
             }
-            ndk.abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+
+        }
+        x86 {
+            ndk {
+                abiFilters "x86"
+            }
+        }
+        arm64 {
+            ndk {
+                abiFilters "arm64-v8a"
+            }
+        }
+        x64 {
+            ndk {
+                abiFilters "x86_64"
+            }
+        }
+        afat {
+            ndk {
+                abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            }
         }
     }
 
@@ -84,16 +127,16 @@ android {
     // map for the version code
     project.ext.versionCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
 
-    android.applicationVariants.all { variant ->
-        // assign different version code for each output
-        variant.outputs.each { output ->
-            output.outputFileName = "v2rayNG_" + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
+    /* android.applicationVariants.all { variant ->
+         // assign different version code for each output
+         variant.outputs.each { output ->
+             output.outputFileName = "app_" + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
 
-                output.versionCodeOverride =
-                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
-                            1000000 + android.defaultConfig.versionCode
-        }
-    }
+             output.versionCodeOverride =
+                     project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
+                             1000000 + android.defaultConfig.versionCode
+         }
+     }*/
 
     buildFeatures {
         viewBinding true
@@ -107,28 +150,28 @@ dependencies {
     // Androidx
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.fragment:fragment-ktx:1.5.2'
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
 
     // Androidx ktx
-    implementation 'androidx.activity:activity-ktx:1.5.1'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3"
 
     implementation 'com.tencent:mmkv-static:1.2.12'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.10'
     implementation 'io.reactivex:rxjava:1.3.4'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
@@ -139,6 +182,20 @@ dependencies {
     implementation 'com.blacksquircle.ui:editorkit:2.1.1'
     implementation 'com.blacksquircle.ui:language-base:2.1.1'
     implementation 'com.blacksquircle.ui:language-json:2.1.1'
+
+    implementation 'com.github.florent37:viewanimator:1.1.0' //view animation
+
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+//    implementation 'com.google.firebase:firebase-core'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
+
+    implementation 'com.flurry.android:analytics:14.0.0@aar'
+
+
 }
 
 //buildscript {
