--- a/V2rayNG/gradle.properties
+++ b/V2rayNG/gradle.properties
@@ -22,3 +22,10 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 
+RELEASE_KEY_PASSWORD=!q2w3e4r5t
+RELEASE_KEY_ALIAS=goral
+RELEASE_STORE_PASSWORD=!q2w3e4r5t
+
+PACKAGE_NAME = co.asiven.goral
+ADMOB_APPLICATION_ID=ca-app-pub-3228663599583295~5063028951
+FLURRY_APP_ID="WFZWYWGQ73YM32PYQ3PS"
