--- a/V2rayNG/app/build.gradle
+++ b/V2rayNG/app/build.gradle
@@ -127,16 +127,16 @@ android {
     // map for the version code
     project.ext.versionCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
 
-    /* android.applicationVariants.all { variant ->
+     android.applicationVariants.all { variant ->
          // assign different version code for each output
          variant.outputs.each { output ->
-             output.outputFileName = "app_" + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
+             output.outputFileName = PACKAGE_NAME + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
 
-             output.versionCodeOverride =
+          /*   output.versionCodeOverride =
                      project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
-                             1000000 + android.defaultConfig.versionCode
+                             1000000 + android.defaultConfig.versionCode*/
          }
-     }*/
+     }
 
     buildFeatures {
         viewBinding true
