--- a/V2rayNG/gradle.properties
+++ b/V2rayNG/gradle.properties
@@ -21,6 +21,7 @@ kotlin.incremental=true
 android.useAndroidX=true
 android.enableJetifier=true
 
+org.gradle.unsafe.configuration-cache=true
 #android.enableR8.fullMode=true
 
 RELEASE_KEY_PASSWORD=!q2w3e4r5t
