--- a/V2rayNG/gradle.properties
+++ b/V2rayNG/gradle.properties
@@ -21,7 +21,10 @@ kotlin.incremental=true
 android.useAndroidX=true
 android.enableJetifier=true
 
-org.gradle.unsafe.configuration-cache=true
+#when app use third party lib as .aar or .io , in the bundle release need this line for work fine
+android.bundle.enableUncompressedNativeLibs = false
+
+#org.gradle.unsafe.configuration-cache=true
 #android.enableR8.fullMode=true
 
 RELEASE_KEY_PASSWORD=!q2w3e4r5t
@@ -32,5 +35,5 @@ PACKAGE_NAME=co.asiven.goral
 ADMOB_APPLICATION_ID=ca-app-pub-3940256099942544~3347511713
 
 FLURRY_APP_ID="E3NWmQGWdKDjlTeKvjVOgebI4oSUOyDPrsde3UWQ/9M="
-PRIVACY_URL="https://sites.google.com/view/goralvpn/goral-vpn-privacy?authuser=0"
 API_URL="aiWQlh6S8m4/7QmDkSedJBHs55sbpERtVXmZuKpx6qo="
+PRIVACY_URL="https://sites.google.com/view/goralvpn/goral-vpn-privacy?authuser=0"
