--- a/V2rayNG/app/build.gradle
+++ b/V2rayNG/app/build.gradle
@@ -17,7 +17,7 @@ android {
     //auto increment version code
     def Properties versionProps = new Properties()
     def versionPropsFile = file('version.properties')
-    if(versionPropsFile.exists())
+    if (versionPropsFile.exists())
         versionProps.load(new FileInputStream(versionPropsFile))
     def code = (versionProps['VERSION_CODE'] ?: "0").toInteger() + 1
     versionProps['VERSION_CODE'] = code.toString()
@@ -29,8 +29,7 @@ android {
         targetSdkVersion Integer.parseInt("$targetSdkVer")
         multiDexEnabled true
         versionCode code
-        versionName "1.0." + code
-        ndk.abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+        versionName "1.2.1"
 
         manifestPlaceholders = [
                 admobAppId     : ADMOB_APPLICATION_ID,
@@ -43,6 +42,27 @@ android {
 
     }
 
+    bundle {
+        language {
+            // This property is set to true by default.
+            // You can specify `false` to turn off
+            // generating configuration APKs for language resources.
+            // These resources are instead packaged with each base and
+            // feature APK.
+            // Continue reading below to learn about situations when an app
+            // might change setting to `false`, otherwise consider leaving
+            // the default on for more optimized downloads.
+            enableSplit = false
+        }
+        density {
+            // This property is set to true by default.
+            enableSplit = true
+        }
+        abi {
+            // This property is set to true by default.
+            enableSplit = true
+        }
+    }
 
     signingConfigs {
         debug {
@@ -63,10 +83,12 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
             debuggable false
+            jniDebuggable false
             zipAlignEnabled true
+            minifyEnabled true
             shrinkResources true
+            ndk.debugSymbolLevel = 'FULL'
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField 'Boolean', 'DEBUG_VERSION', "false"
@@ -139,16 +161,13 @@ android {
     // map for the version code
     project.ext.versionCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
 
-     android.applicationVariants.all { variant ->
-         // assign different version code for each output
-         variant.outputs.each { output ->
-             output.outputFileName = PACKAGE_NAME + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
-
-          /*   output.versionCodeOverride =
-                     project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
-                             1000000 + android.defaultConfig.versionCode*/
-         }
-     }
+    android.applicationVariants.all { variant ->
+        // assign different version code for each output
+        variant.outputs.each { output ->
+            output.outputFileName = PACKAGE_NAME + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
+               output.versionCodeOverride =project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) * 1000000 + android.defaultConfig.versionCode
+        }
+    }
 
     buildFeatures {
         viewBinding true
@@ -211,7 +230,8 @@ dependencies {
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-    implementation 'com.google.android.play:app-update:2.0.1'//google play in-app auto update
+    implementation 'com.google.android.play:app-update:2.0.1'
+//google play in-app auto update
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
